test_cases/bad/undefined_type3.lat
class foo {
    bar baz;
}

int main() {
    return 0;
}

